# dedacker

./: CMakeLists.txt  README.md
examples/: labels.txt
examples/images/: 2007_002400.txt  2007_002412.txt  2007_002426.txt  2007_002445.txt  2007_002462.txt  2007_002470.txt  2007_002488.txt  2007_002539.txt  2007_002545.txt  2007_002565.txt  2007_002611.txt
include/: motto.h
lib/: random.cpp  random.h  t_os.cpp  t_os.h  t_string.cpp  t_string.h
src/: checkmode.cpp  main.cpp  motto.cpp  previewmode.cpp  test.cpp
